--- a/TP2/Informe/Trabajo Practico 2 - aa2015.ipynb
+++ b/TP2/Informe/Trabajo Practico 2 - aa2015.ipynb
@@ -38,7 +38,7 @@
       "\n",
       "Es importante mencionar que para la lectura de este informe los bloques de c\u00f3digo no est\u00e1n intensionados para ser ejecutados dentro del INotebook. El c\u00f3digo inclu\u00eddo en los notebook son los extractos m\u00e1s importantes del c\u00f3digo que se adjunt\u00f3 junto con este informe, que puede ser executado directamente desde consola. La raz\u00f3n de esta decici\u00f3n es que el c\u00f3digo para el presente trabajo es bastante mas complejo que el anterior, y requerir\u00eda poner demasiado c\u00f3digo dentro del INotebook. Por otro lado, las funcionalidades mas importantes dependen de tener los archivos de imagenes, archivos de features pre-calculados y de los archivos de clasificadores pre-entrenados, pero todos estos archivos son demasiado \"pesados\" para estar inclu\u00eddos en este documento.\n",
       "\n",
-      "Como se muestra en el cap\u00edtulo final, las pruebas con cross-validation utilizando el mejor clasificador encontrado nos da una presici\u00f3n cercana al 74%."
+      "Como se muestra en el cap\u00edtulo final, las pruebas con cross-validation utilizando el mejor clasificador encontrado nos da una presici\u00f3n cercana al 78%!"
      ]
     },
     {
